# MCP

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/models/: mcp_models.py  product.py  user.py
app/routers/: mcp_routes.py
app/services/: mcp_service.py
app/tests/: test_auth.py
