[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pydantic = {extras = ["email"], version = "^2.7.1"}
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9" # For form data, file uploads
# email-validator = "^2.1.1" # For email validation in Pydantic
httpx = "^0.27.0" # For async HTTP requests (testing or external APIs)
asyncpg = "^0.29.0" # PostgreSQL driver
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9" # Required by Alembic for PostgreSQL, even with asyncpg for app
slowapi = "^0.1.9"
redis = "^5.0.1" # For Redis caching
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"} # For Redis caching

[tool.poetry.group.dev.dependencies] 